# motor_controller

./: .gitignore  CMakeLists.txt
core/: CMakeLists.txt
core/include/: axis_core.hpp  current_loop.hpp  foc.hpp  foc_math.hpp  limits.hpp  lowpass.hpp  modulation.hpp  pi.hpp  position_loop.hpp  speed_estimator.hpp  speed_loop.hpp  trajectory.hpp
core/src/: axis_core.cpp  current_loop.cpp  foc.cpp  limits.cpp  lowpass.cpp  modulation.cpp  pi.cpp  position_loop.cpp  speed_estimator.cpp  speed_loop.cpp  trajectory.cpp
core/tests/: test_axis_core.cpp  test_current_loop.cpp  test_foc.cpp  test_foc_math.cpp  test_limits.cpp  test_lowpass.cpp  test_modulation.cpp  test_pi.cpp  test_position_loop.cpp  test_speed_estimator.cpp  test_speed_loop.cpp  test_trajectory.cpp
docs/: motor_control.tex
docs/graphs/: project_balanced_plane.py  project_hexagon.py  rotor_magnetization.py  switching_cube.py
docs/plots/: convex_hull.py  inverter_schematic.py  project_balanced_plane.py  project_hexagon.py  rotated.py  rotor.py  rotor_and_stator.py  rotor_and_stator_magnetization.py  rotor_magnetization.py  rotor_magnetization_radial_slice.py  rotor_magnetization_tangential.py  rotor_maxwell_tensor.py  rotor_stator_magnetization.py  rotor_unrolled.py  rotor_unrolled_electrical_angle.py  switching_cube.py  voltage_cube_gauge.py  voltage_cube_transform.py
sim/: CMakeLists.txt
sim/include/: pmsm.hpp  sim_axis_runner.hpp  sim_math.hpp
sim/src/: pmsm.cpp  sim_axis_runner.cpp
sim/tests/: test_closed_loop_position.cpp  test_pmsm.cpp
